[gd_scene load_steps=9 format=3 uid="uid://dpyw8mdapligj"]

[ext_resource type="Script" path="res://scripts/options_screen.gd" id="1_x67xk"]
[ext_resource type="Texture2D" uid="uid://dmq4x1tv03bbn" path="res://sprites/options_screen.png" id="2_g5ava"]
[ext_resource type="Texture2D" uid="uid://cvndpmgbm515q" path="res://sprites/options_sprite.png" id="3_nrluh"]
[ext_resource type="Material" uid="uid://d3voebh36ka7u" path="res://new_shader_material.tres" id="4_8nbqq"]
[ext_resource type="FontFile" uid="uid://cit1npgi7fd48" path="res://ff-comma-trial/FFCommaTrial-Regular.ttf" id="5_avlnm"]

[sub_resource type="LabelSettings" id="LabelSettings_qrw0b"]
font = ExtResource("5_avlnm")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_y4png"]
font = ExtResource("5_avlnm")

[sub_resource type="LabelSettings" id="LabelSettings_xi4x6"]
font = ExtResource("5_avlnm")

[node name="OptionsScreen" type="Node2D"]
script = ExtResource("1_x67xk")

[node name="OptionsScreen" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("2_g5ava")

[node name="Options_button" type="Button" parent="."]
visible = false
offset_left = 603.0
offset_right = 640.0
offset_bottom = 37.0
focus_mode = 0
icon = ExtResource("3_nrluh")
flat = true

[node name="Options_label" type="Label" parent="."]
material = ExtResource("4_8nbqq")
offset_left = 266.0
offset_top = 41.0
offset_right = 386.0
offset_bottom = 78.0
text = "OPTIONS"
label_settings = SubResource("LabelSettings_qrw0b")

[node name="Sound_fx_label" type="Label" parent="."]
material = ExtResource("4_8nbqq")
offset_left = 94.0
offset_top = 113.0
offset_right = 201.0
offset_bottom = 136.0
text = "Sound FX:"
label_settings = SubResource("LabelSettings_y4png")

[node name="Music_volume label" type="Label" parent="."]
material = ExtResource("4_8nbqq")
offset_left = 94.0
offset_top = 83.0
offset_right = 233.0
offset_bottom = 106.0
text = "Music volume:"
label_settings = SubResource("LabelSettings_y4png")

[node name="sound_fx_slider" type="HSlider" parent="."]
offset_left = 277.0
offset_top = 113.0
offset_right = 537.0
offset_bottom = 129.0
value = 100.0

[node name="music_volume_slider" type="HSlider" parent="."]
offset_left = 277.0
offset_top = 84.0
offset_right = 537.0
offset_bottom = 100.0
value = 100.0

[node name="back_to_main_menu" type="Node2D" parent="."]

[node name="Back_to_main_menu_button" type="Button" parent="back_to_main_menu"]
material = ExtResource("4_8nbqq")
offset_left = 196.0
offset_top = 291.0
offset_right = 440.0
offset_bottom = 341.0
focus_mode = 0
flat = true

[node name="Back_to_main_menu_label" type="Label" parent="back_to_main_menu"]
material = ExtResource("4_8nbqq")
offset_left = 195.0
offset_top = 289.0
offset_right = 439.0
offset_bottom = 340.0
text = "Back to main menu
(All progress will be lost)"
label_settings = SubResource("LabelSettings_xi4x6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="soundfx_player" type="AudioStreamPlayer2D" parent="."]

[connection signal="mouse_entered" from="Options_button" to="." method="_on_options_button_mouse_entered"]
[connection signal="mouse_exited" from="Options_button" to="." method="_on_options_button_mouse_exited"]
[connection signal="pressed" from="Options_button" to="." method="_on_options_button_pressed"]
[connection signal="value_changed" from="sound_fx_slider" to="." method="_on_sound_fx_slider_value_changed"]
[connection signal="pressed" from="back_to_main_menu/Back_to_main_menu_button" to="." method="_on_back_to_main_menu_button_pressed"]
